--- a/index.css
+++ b/index.css
@@ -73,8 +73,8 @@ nav ul li a:hover {
 
 .firstSection>div {
 /*        width: 30%; */
-    justify-content: center;
-    align-items: center;
+/*     justify-content: center;
+    align-items: center; */
     display: flex;
     flex-direction: column;
 
@@ -120,8 +120,7 @@ nav ul li a:hover {
 }
 
 .rightSection img {
-    width: 75%;
-    height: 75%;
+   maxwidth:100%;
     margin: 50px 0;
 }
 
